--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "illuminate/support": "^6.0|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
-        "phpunit/phpunit": "^9.5"
+        "orchestra/testbench": ">=4.0",
+        "phpunit/phpunit": ">=8.5"
     }
 }
