support for php 8.0 and laravel 8

--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,12 @@
         }
     },
     "require": {
-        "php": "^7.2.5",
-        "illuminate/support": "^6.0|^7.0"
+        "php": "^7.3|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": ">=4.0",
-        "phpunit/phpunit": ">=8.5"
+        "phpunit/phpunit": ">=8.5",
+        "laravel/legacy-factories": "^1.1"
     }
 }
