--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
         }
     },
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "php": "^8.0|^8.1|^8.2",
+        "illuminate/support": "^10.0"
     },
     "require-dev": {
         "orchestra/testbench": ">=4.0",
